Fixed body class name
Fixed to not overlap and overwrite the CSS from other pages

--- a/frontend-react/src/components/Pages/Counter/CounterPage.css
+++ b/frontend-react/src/components/Pages/Counter/CounterPage.css
@@ -1,4 +1,4 @@
-.body {
+.body-counter {
     background: white;
     display: flex;
     position: relative;
